Added setenv.sh file to tomcat configuration.